--- a/src/settings/default-settings.json
+++ b/src/settings/default-settings.json
@@ -9,5 +9,7 @@
   "freeSkipAfterXSolvedLevels": 10,
   "infiniteSkips": false,
   "CMPLevels": false,
-  "settingsName": "classic"
+  "settingsName": "classic",
+  "lebuffMode": false,
+  "lebuffPushupCount": 100
 }
