--- a/src/user-data/configuration.json
+++ b/src/user-data/configuration.json
@@ -1,7 +1,7 @@
 {
   "initialSetupDone": true,
-  "dustforceDirectory": "/Users/yannickk/Library/Application Support/Steam/steamapps/common/Dustforce/Dustforce.app/Contents/Resources/",
+  "dustforceDirectory": "X:\\Steam\\steamapps\\common\\Dustforce",
   "styling": {
-    "opacity": 100
+    "opacity": 68
   }
 }
