--- a/src/user-data/settings.json
+++ b/src/user-data/settings.json
@@ -1,13 +1,15 @@
 {
   "seed": "",
-  "startTime": 3600000,
+  "startTime": 900000,
   "minSSCount": 10,
   "maxSSCount": 500,
-  "fastestSSTime": 60000,
+  "fastestSSTime": 20000,
   "skips": true,
   "freeSkips": 1,
-  "freeSkipAfterXSolvedLevels": 10,
-  "infiniteSkips": false,
+  "freeSkipAfterXSolvedLevels": 0,
+  "infiniteSkips": true,
   "CMPLevels": false,
-  "settingsName": "classic"
+  "settingsName": "custom",
+  "lebuffMode": true,
+  "lebuffPushupCount": 35
 }
